editing and smoothing content

--- a/src/pages/guidelines/typography/experiences.mdx
+++ b/src/pages/guidelines/typography/experiences.mdx
@@ -1,18 +1,20 @@
 ---
 label:
-  Within Carbon, there are two type sets available for use with productive and
+  Carbon provides designers with two type sets that support productive and
   expressive experiences.
 title: Typography
 description:
-  Within Carbon, there are two type sets available for use with productive and
+  Carbon provides designers with two type sets that support productive and
   expressive experiences.
 tabs: ['Overview', 'Experiences', 'Type sets', 'Code']
 ---
 
 <PageDescription>
 
-Within Carbon, there are two type sets available for use with productive and
-expressive experiences.
+Carbon provides two type sets that support both productive and expressive
+experiences. Primarily, productive was designed for product and expressive was
+designed for web pages, but there are opportunities to blend contrasting moments
+to elevate the overall experience.
 
 </PageDescription>
 
@@ -27,8 +29,8 @@ within the one [Sketch kit](/designing/design-kits/).
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
-<AnchorLink>About productive</AnchorLink>
-<AnchorLink>About expressive</AnchorLink>
+<AnchorLink>The productive experience</AnchorLink>
+<AnchorLink>The expressive experience</AnchorLink>
 <AnchorLink>Blending experiences</AnchorLink>
 <AnchorLink>Guidelines</AnchorLink>
 <AnchorLink>Getting help</AnchorLink>
@@ -44,16 +46,14 @@ IBM.com website pages.
 
 The overarching rule has been to use the productive type styles for product
 design and the expressive for web pages. For the most part, this is still a good
-guideline to follow. However, over time we've recognized some situations where a
-productive moment within an expressive experience makes sense and likewise,
-although to a lesser degree, where a user may benefit from an expressive moment
-within a productive experience.
+guideline to follow. However, over time we've recognized some situations where
+we can create contrasting moments that better support the user with their
+specific tasks.
 
-Let's look at the differences between these two experiences to understand the
-respective design rationales, and then see what opportunities are available to
-create contrasting moments that best support the user with their specific tasks.
+Let's look at the respective design rationales for each experience, and then see
+where it makes sense to provide a blend.
 
-## About productive
+## The productive experience
 
 Carbon Design System started as the design system for Cloud console and provides
 typography that supports **productive experiences**.
@@ -67,14 +67,12 @@ The key drivers defining a productive experience are as follows:
   complete a task and also the abandonment rate.
 
 Given these considerations, a high information density is preferred. Keeping
-content condensed is helpful to support focus on complex tasks. With this in
-mind, the productive styles (\*\*link to typeset tables) have been carefully
-curated and they create a series of clear user expectations about hierarchy.
+content condensed is helpful to support focus on complex tasks.
 
-## About expressive
+## The expressive experience
 
-Carbon for IBM.com is for the creators of [IBM.com](http://ibm.com) and it
-provides typography that supports **expressive experiences.**
+Carbon for IBM.com is for the creators of IBM.com and it provides typography
+that supports **expressive experiences.**
 
 The key drivers defining an expressive experience are as follows:
 
@@ -87,104 +85,88 @@ The key drivers defining an expressive experience are as follows:
 
 Given these considerations, larger type sizes and a more editorial approach
 allows users to scan, read, and navigate multiple pages with comfort and ease.
-As with the productive styles, the expressive styles (\*\*link to typeset
-tables) have been carefully curated and they create clear user expectations
-about hierarchy.
 
 ## Blending experiences
 
-The rationale for having two experiences is to support users where they are:
+The spaces we are designing for are no longer divided between productive and
+expressive. Understanding the rationale behind each of the experiences is the
+key. Experiences can be blended with what we call "moments" if the alternative
+experience better supports the user purpose.
 
-- On web pages where long form reading is the norm, users would find the high
-  type density found in products overwhelming and information difficult to
-  absorb.
-- In products where users are focused on complex tasks, the more dramatic,
-  graphic use of type in editorial and marketing design would be distracting.
+If your users are working in a product but pausing to read or scan for options,
+an expressive moment can facilitate easy reading and/or create a desired impact
+or pause.
 
-However, there are situations when productive moments within the website
-experience work better, and where expressive moments in product can create a
-desired impact or pause. And so it can be preferable to find that balance and
-use the two experiences. It's all about purpose.
+If your users are on the website and reading, but then switch to a focused task
+within the web experience, using productive styles within that component would
+facilitate focus.
 
 ### Using productive moments within [IBM.com](http://ibm.com) pages
 
-Our design work is no longer divided between productive and expressive. Here are
-some of the places the Dotcom team use productive experiences:
+Here are some of the places the Dotcom team use productive moments:
 
-- the global masthead mega menu
+- The global masthead mega menu
 - IBM.com search
-- commerce
-- product configuration
-- search/filter on catalogs
+- Commerce
+- Product configuration
+- Search/filter on catalogs
 
 ### Using expressive moments within product designs
 
-In product, there are fewer situations where it makes sense to lift the user out
-of the concentration afforded by the productive experience. You will probably
-see more expressive type styles used on the journey into the product. However,
-here are some places where you may see expressive moments:
+Here are some of the places the product teams are using expressive moments:
 
-- Walk me (need to verify)
+- Product home pages, also known as "world overview pages"
+- Onboarding
 - Empty states
+- Log in pages
 - Catalog pages
+- Expressive cards
 
 ## Guidelines
 
-People unconsciously use type size as a signal of hierarchy, and therefore the
-correct use of type styles is critical for clear communication in our products
-and web pages.
+Here are some guidelines for creating productive and expressive moments.
 
-Each type set has been curated to create a full range of type styles that work
-together to create clear user expectations about hierarchy, within both the
-productive and expressive experiences.
+#### Keep type styles consistent within a discrete task, component, or region
 
-Type styles must:
+People unconsciously use type size as a signal of hierarchy, and each type set
+has been designed with expectations about hierarchy in mind. Mixing type styles
+within a component could jumble the hierarchy and create confusion.
 
-#### Align to the space in which the user is working.
+#### Primarily align to the space in which the user is working
 
-That is, the productive type set is used for product and the expressive type set
-is used for web pages.
+The productive type set should still be used for product and the expressive type
+set for web pages. The alternate moments are just that, moments.
 
-#### Match and support the user task.
+#### Match and support the user task
 
 Within each type set, there are appropriately sized type styles for each user
 task.
 
-#### Be consistently applied within a discrete task, component, or region.
+_When users need to focus on a task_ and are interacting through inputs, forms,
+and controls, use the productive type set. The more dramatic, graphic use of
+type in editorial design would be distracting.
 
-Mixing type styles within a component could jumble the hierarchy and create
-confusion.
+_When users are learning and exploring,_ and interacting through impactful
+imagery, layout, and long form reading, use the expressive type set. The high
+type density found in products would be overwhelming, and information difficult
+to absorb.
 
-Do's
+## Questions?
 
--- For long paragraphs in product, maintain the correct hierarchies by using
-body-long-01.
+If you have any questions about using either of these experiences, reach out to
+the teams on Slack or sign up to share your work in a review.
 
--- For long paragraphs in web pages, maintain the correct hierarchies by using
-body-long-02.
+#### Carbon Design System
 
-Don'ts
+- Slack channel:
+  [#carbon-design-system](https://ibm-studios.slack.com/messages/C0M053VPT/)
+- [Meetups](https://www.carbondesignsystem.com/whats-happening/meetups/) with
+  Carbon Design System
 
-If the user is embedded in a task, do not distract by suddenly switching to a
-larger type style.
+#### Carbon for IBM Dotcom
 
-If the decision is made to blend the experiences, the use of type sets should
-match the purpose and be contained to the component or region where the task is
-being performed. If the user moves to a task where a more compact display is
-desired, ensure that all elements within that task/component use the same type
-sets.
-
-Headings are a key difference between the two type sets and they should not be
-blended. Do's
-
-Don'ts
-
-## Getting help
-
-Switching between experiences is something that should always be carefully
-considered. The use cases can be used as a guide for when one or the other is
-appropriate. If you're still unsure, reach out (\*\*link to below) to set up a
-review of your work in progress.
-
-- Carbon Meetups
-- Carbon for [IBM.com](http://ibm.com) office hours
+- Slack channel:
+  [#carbon-for-ibm-dotcom](https://cognitive-app.slack.com/archives/C2PLX8GQ6)
+- Office hours with Carbon for IBM.com. See our
+  [Slack channel](https://cognitive-app.slack.com/archives/C2PLX8GQ6) for
+  details.
