--- a/src/pages/guidelines/typography/overview.mdx
+++ b/src/pages/guidelines/typography/overview.mdx
@@ -32,26 +32,33 @@ users through a product or experience.
 
 ## Type tokens and sets
 
-Carbon uses type tokens and themes to manage typography. Type tokens are pre-set
-configurations of typographic elements such as font size, weight, or leading
-(line height) that are specifically calibrated for use alongside
+Carbon uses type tokens across two type sets to manage typography. Type tokens
+are pre-set configurations of typographic elements such as font size, weight, or
+leading (line height) that are specifically calibrated for use alongside
 [IBM Plex](http://ibm.com/plex) in product. Selecting the appropriate type style
 is determined by layout or template structure. Layouts may have several levels
 of architecture or areas that require varying typographic hierarchies.
 
-### Productive vs. Expressive type sets
+### Productive and expressive type sets
 
-Productive type is reserved for use in web-based product design, where the user
-needs to focus on tasks. The Productive styles are curated to create a series of
-clear user expectations about hierarchy. Expressive type, on the other hand,
-allows for a more dramatic, graphic use of type in editorial and marketing
-design — which many users would find distracting in product.
+The productive type set is primarily used within product spaces, where users
+benefit from a more condensed treatment of content to maintain focus on tasks.
+The productive styles work together to support the hierarchy of information and
+set user expectations. On the other hand, the larger expressive type styles
+allow for a more dramatic, graphic use of type in editorial and marketing
+design. These type styles are excellent for long form reading and scanning, but
+would be distracting for use in product.
 
-There are two heading sets, one Productive and one Expressive. The difference
-between the Productive and Expressive styles is mainly evident in the Headings.
-Aside from the token names, which are specifically calibrated for product vs.
-editorial designers (e.g. $label-01 vs. $caption-01) — the Supporting and Body
-styles have the same values in both the Productive and Expressive sets.
+Within **Body styles** and **Supporting styles**, the same set of styles are
+offered. Productive styles are named with a suffix of `-01` and expressive style
+names have a suffix of `-02`.
+
+There are two heading sets, and apart from sizing, the major difference between
+them is in how they are implemented. Expressive uses a fluid type set and
+productive uses fixed headings.
+
+For more detail, see [Experiences](/guidelines/typography/experiences/) and
+[Type sets](/guidelines/typography/type-sets/).
 
 ## Typeface: IBM Plex
 
