--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -1,18 +1,18 @@
 ---
 label:
-  Our two type sets support designers creating experiences for both IBM products
-  and IBM.com website pages..
+  The productive and expressive type sets support designers creating for a full
+  range of user needs and activities across product and web pages.
 title: Typography
 description:
-  Our two type sets support designers creating experiences for both IBM products
-  and IBM.com website pages.
+  The productive and expressive type sets support designers creating for a full
+  range of user needs and activities across product and web pages.
 tabs: ['Overview', 'Experiences', 'Type sets', 'Code']
 ---
 
 <PageDescription>
 
-Our two type sets support designers creating experiences for both IBM products
-and IBM.com website pages.
+The productive and expressive type sets support designers creating for a full
+range of user needs and activities across product and web pages.
 
 </PageDescription>
 
@@ -35,8 +35,8 @@ within the one [Sketch kit](/designing/design-kits/).
 
 ## Overview
 
-The two IBM type sets support designers creating `expressive` and `productive`
-experiences within IBM products and [IBM.com](http://ibm.com) website pages.
+The two IBM type sets support designers creating productive and expressive
+experiences within IBM products and IBM.com website pages.
 
 ## Differences between type sets
 
@@ -49,14 +49,14 @@ experiences use a base type size of 16px.
 
 #### Style naming conventions
 
-Within `Body styles` and `Supporting styles`, the same set of styles are
+Within **Body styles** and **Supporting styles**, the same set of styles are
 offered. Productive styles are named with a suffix of `-01` and expressive style
 names have a suffix of `-02`.
 
 #### Two heading sets
 
-There are two heading type sets, one Productive and one Expressive. The major
-difference between the type sets is seen in how they are implemented.
+There are two heading type sets and the major difference between them is in how
+they are implemented.
 
 - Expressive uses a fluid type set for headings. Breakpoints are set in the code
   so that the type adjusts smoothly as it moves between breakpoints.
@@ -71,12 +71,20 @@ difference between the type sets is seen in how they are implemented.
 
 ## Questions?
 
-If you have any questions about using experiences, reach out to the teams on
-Slack below, or sign up to share you work in a review.
+If you have any questions about using either of these experiences, reach out to
+the teams on Slack or sign up to share your work in a review.
 
-- Slack channels
-  - Carbon Design System: #carbon-design-system
-  - Carbon for IBM Dotcom: #carbon-for-ibm-dotcom
-- [Meetups](https://www.carbondesignsystem.com/whats-happening/meetups/) for
-  Carbon
-- Office hours for IBM Dotcom
+#### Carbon Design System
+
+- Slack channel:
+  [#carbon-design-system](https://ibm-studios.slack.com/messages/C0M053VPT/)
+- [Meetups](https://www.carbondesignsystem.com/whats-happening/meetups/) with
+  Carbon Design System
+
+#### Carbon for IBM Dotcom
+
+- Slack channel:
+  [#carbon-for-ibm-dotcom](https://cognitive-app.slack.com/archives/C2PLX8GQ6)
+- Office hours with Carbon for IBM.com. See our
+  [Slack channel](https://cognitive-app.slack.com/archives/C2PLX8GQ6) for
+  details.
