em dash & examples
Added em dash and assertive and polite toast example

--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -235,7 +235,7 @@ critical for a user to read or interact with the notification.
 
 ## Toast notifications
 
-There are two types of toast notifications, polite and assertive. Polite toast
+There are two types of toast notifications—polite and assertive. Polite toast
 notifications are used to display a message to the user that does not interrupt
 keyboard and screen reader users current task and then queues the notification
 until whatever task the user is currently working on is complete. Assertive
@@ -268,6 +268,19 @@ multiple actions are required, consider using a
 toast notifications cannot include interactive elements due to limitations with
 how ARIA tags are interpreted by screen readers and are inaccessible via
 keyboard and screen readers.
+
+<Row>
+<Column colLg={8}>
+
+![Example of toast notification with action button and time stamp](images/07_Toast_types_608.png)
+
+</Column>
+</Row>
+
+<Caption>
+  Example of a polite toast notification with action button (left) and assertive
+  toast notification with time stamp (right)
+</Caption>
 
 #### Time stamp
 
