--- a/src/pages/patterns/notification-pattern/index.mdx
+++ b/src/pages/patterns/notification-pattern/index.mdx
@@ -165,7 +165,7 @@ experience for users.
 | Type               | Usage                                                                                                             | Duration and interaction                                                                                                                         |
 | ------------------ | ----------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------ |
 | Inline             | Provide users with nondisruptive feedback or the status of an action                                              | Persist until the message is resolved or dismissed by user and may include a ghost button action                                                 |
-| Toast              | Short, time-based messages that slide in and out of a page and provide nondisruptive information                  | Disappear automatically or can be dismissed by user                                                                                              |
+| Toast              | Short, time-based messages that slide in and out of a page and provide nondisruptive information                  | Assertive toast notifications disappear automatically or can be dismissed by user. Polite toast notifications persist until dismissed by user    |
 | Banner             | System or product level notifications that are not specific to a task                                             | Persist until dismissed by user and may include a ghost button or link                                                                           |
 | Notification panel | Notification center that provides users with system-generated messages                                            | Opened and closed by user                                                                                                                        |
 | Modal              | Highly disruptive notifications that provide users with critical information that needs their attention or action | Persist and block tasks until dismissed by user. Modals allow more user action than other notifications and can include other Carbon components. |
@@ -219,6 +219,19 @@ Polite toast notifications can contain action buttons as well as remain on
 screen to allow a user to take action or dismiss the alert. These notifications
 do not interrupt the screen reader and keyboard workflows so are typically
 considered less intrusive than the assertive toast notification.
+
+<Row>
+<Column colLg={12}>
+
+![Examples of polite and assertive toast notifications](/images/8_toast_types.png)
+
+<Caption>
+  Example of assertive toast notification (left) and polite toast notification
+  (right)
+</Caption>
+
+</Column>
+</Row>
 
 Carbon toasts can be either low-contrast or high-contrast. Their color should
 correspond with the message intent and they can also use an icon to convey the
