updated copy, added image
updated punctuation and then added animated toasts images

--- a/src/pages/patterns/notification-pattern/index.mdx
+++ b/src/pages/patterns/notification-pattern/index.mdx
@@ -165,7 +165,7 @@ experience for users.
 | Type               | Usage                                                                                                             | Duration and interaction                                                                                                                         |
 | ------------------ | ----------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------ |
 | Inline             | Provide users with nondisruptive feedback or the status of an action                                              | Persist until the message is resolved or dismissed by user and may include a ghost button action                                                 |
-| Toast              | Short, time-based messages that slide in and out of a page and provide nondisruptive information                  | Assertive toast notifications disappear automatically or can be dismissed by user. Polite toast notifications persist until dismissed by user    |
+| Toast              | Short, time-based messages that slide in and out of a page and provide nondisruptive information                  | Assertive toast notifications disappear automatically or can be dismissed by user. Polite toast notifications persist until dismissed by user.   |
 | Banner             | System or product level notifications that are not specific to a task                                             | Persist until dismissed by user and may include a ghost button or link                                                                           |
 | Notification panel | Notification center that provides users with system-generated messages                                            | Opened and closed by user                                                                                                                        |
 | Modal              | Highly disruptive notifications that provide users with critical information that needs their attention or action | Persist and block tasks until dismissed by user. Modals allow more user action than other notifications and can include other Carbon components. |
@@ -221,7 +221,7 @@ do not interrupt the screen reader and keyboard workflows so are typically
 considered less intrusive than the assertive toast notification.
 
 <Row>
-<Column colLg={12}>
+<Column colLg={8}>
 
 ![Examples of polite and assertive toast notifications](/images/8_toast_types.png)
 
@@ -261,9 +261,9 @@ modal.
 <Row>
 <Column colLg={8}>
 
-![Toast notification in a product](/images/4_Toast_736.png)
+![Toast notification in a product](/images/4_toast_736.gif)
 
-<Caption>Low-contrast toast notification</Caption>
+<Caption>Low-contrast toast notifications</Caption>
 
 </Column>
 </Row>
