--- a/src/pages/components/notification/accessibility.mdx
+++ b/src/pages/components/notification/accessibility.mdx
@@ -29,7 +29,7 @@ import {
 Notification Carbon components are messages that communicate information to a
 user. The WAI-ARIA `role="status"` and `role="log"` are equivalent to
 `aria-live="polite"`. It is used to display a message to the user in a way that
-does not interrupt the users current task and queues the notification until
+does not interrupt the user's current task and queues the notification until
 whatever task the user is currently working on is complete. If the notification
 contains an urgent message, a `role="alert"` can be used, it is equivalent to
 `aria-live="assertive"`. It is used to display a message to the user that
