--- a/src/pages/components/notification/accessibility.mdx
+++ b/src/pages/components/notification/accessibility.mdx
@@ -33,7 +33,7 @@ does not interrupt the user's current task and queues the notification until
 whatever task the user is currently working on is complete. If the notification
 contains an urgent message, a `role="alert"` can be used, it is equivalent to
 `aria-live="assertive"`. It is used to display a message to the user that
-interrupts the users current task. These are considerably more disruptive to
+interrupts the user's current task. These are considerably more disruptive to
 users than the`role="status"`or`role="log"`. In either case, these notifications
 attract the user’s attention without receiving focus to communicate the message.
 
