docs: Size style image updates for V11  (#2418)
* docs: Accordion size image update for V11

* docs: Content switcher size image update for V11

* docs: Date picker size image update for V11

* docs: Dropdown size image update for V11

* docs: File uploader size image update for V11

* docs: Number input size image update for V11

* docs: Overflow menu size image update for V11

* docs: Search size image update for V11

* docs: Select size image update for V11

* docs: Tag size image update for V11

* docs: Text input size image update for V11

* docs: Toggle size image update for V11

* Updated changes for size image of Accordion V11

* Updated changes for size image of Content switcher V11

* Updated changes for size image of Date picker V11

* Updated changes for size image of Accordion V11

* Updated changes for size image of toggle V11

* Updated changes for size image of Date picker V11

* Updated changes for size image of Dropdown V11

* Updated changes for size image of Accordion V11

* Updated changes for size image of File uploader V11

* Updated changes for size image of Number input V11

* Updated changes for size image of Overflow menu V11

* Updated changes for size image of Search V11

* Updated changes for size image of Select V11

* Updated changes for size image of Tag V11

* Updated changes for size image of Text input V11

--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -66,14 +66,6 @@ plus the 16 px / 1rem on both sides of the text.
 | `:after`                    | divider                     | 1px      | –             |
 | `.bx--content-switcher-btn` | padding-left, padding-right | 16 / 1   | `$spacing-05` |
 
-## Sizes
-
-| Size        | Height px / rem | 
-| ------------|---------------- |
-| Small (sm)  | 32 / 2          | 
-| Medium (md) | 40 / 2.5        | 
-| Large (lg)  | 48 / 3          |
-
 <div className="image--fixed">
 
 ![Content switcher structure and spacing measurements](images/content-switcher-style-1.png)
@@ -84,3 +76,19 @@ plus the 16 px / 1rem on both sides of the text.
   Structure and spacing measurements for the default size content switcher | px
   / rem
 </Caption>
+
+## Sizes
+
+| Size        | Height px / rem |
+| ----------- | --------------- |
+| Small (sm)  | 32 / 2          |
+| Medium (md) | 40 / 2.5        |
+| Large (lg)  | 48 / 3          |
+
+<div className="image--fixed">
+
+![Sizes for content switcher](images/content-switcher-style-size.png)
+
+</div>
+
+<Caption>Content switcher sizes | px / rem</Caption>
