--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -165,7 +165,7 @@ can be applied to all variants of dropdown.
 
 <div className="image--fixed">
 
-![Dropdown sizes](images/dropdown-style-9.png)
+![Sizes for dropdown](images/dropdown-style-size.png)
 
 </div>
 
