--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -65,7 +65,8 @@ phrase and any proper nouns capitalized.
 
 ## Structure
 
-The add and subtract icons can be found in the [icons](/guidelines/icons/library) library.
+The add and subtract icons can be found in the
+[icons](/guidelines/icons/library) library.
 
 | Class                              | Property                    | px / rem | Spacing token |
 | ---------------------------------- | --------------------------- | -------- | ------------- |
@@ -74,16 +75,6 @@ The add and subtract icons can be found in the [icons](/guidelines/icons/library
 | `.bx--number input[type='number']` | padding-left                | 16 / 1   | `$spacing-05` |
 | `.bx--number__controls`            | padding-left, padding-right | 16 / 1   | `$spacing-05` |
 | `.bx--number`                      | border-bottom               | 1px      | –             |
-
-## Sizes
-The height varies for each size variant and the the width varies based on content, layout, and design. 
-
-| Element | Size        | Height (px/rem) |
-| ------- | ----------- | --------------- |
-| Field   | Small (sm)  | 32 / 2          |
-|         | Medium (md) | 40 / 2.5        |
-|         | Large (lg)  | 48 / 3          |
-
 
 <div className="image--fixed">
 
@@ -94,3 +85,22 @@ The height varies for each size variant and the the width varies based on conten
 <Caption>
   Structure and spacing measurements for a number input | px / rem
 </Caption>
+
+## Sizes
+
+The height varies for each size variant and the the width varies based on
+content, layout, and design.
+
+| Element | Size        | Height (px/rem) |
+| ------- | ----------- | --------------- |
+| Field   | Small (sm)  | 32 / 2          |
+|         | Medium (md) | 40 / 2.5        |
+|         | Large (lg)  | 48 / 3          |
+
+<div className="image--fixed">
+
+![Sizes for number input](images/number-input-style-size.png)
+
+</div>
+
+<Caption>Sizes for number input fields | px / rem</Caption>
