--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -66,11 +66,19 @@ menu. The overflow menu icon can be found in the
 
 ## Sizes
 
-| Element        | Size        | Height (px/rem) |
-| -------------- | ----------- | --------------- |
-| Menu options   | Small (sm)  | 32 / 2          |
-|                | Medium (md) | 40 / 2.5        |
-|                | Large (lg)  | 48 / 3          |
-| Icon button    | Small (sm)  | 32 / 2          |
-|                | Medium (md) | 40 / 2.5        |
-|                | Large (lg)  | 48 / 3          |
+| Element      | Size        | Height (px/rem) |
+| ------------ | ----------- | --------------- |
+| Menu options | Small (sm)  | 32 / 2          |
+|              | Medium (md) | 40 / 2.5        |
+|              | Large (lg)  | 48 / 3          |
+| Icon button  | Small (sm)  | 32 / 2          |
+|              | Medium (md) | 40 / 2.5        |
+|              | Large (lg)  | 48 / 3          |
+
+<div className="image--fixed">
+
+![Sizes for overflow menu](images/overflow-menu-style-size.png)
+
+</div>
+
+<Caption>Sizes for menu options and icon button | px / rem</Caption>
