--- a/src/pages/components/toggle/style.mdx
+++ b/src/pages/components/toggle/style.mdx
@@ -50,24 +50,6 @@ phrase and any proper nouns capitalized, and no more than three words.
 
 ## Structure
 
-### Toggle
-
-| Element     | Property                  | px / rem  | Spacing token |
-| ----------- | ------------------------- | --------- | ------------- |
-| Toggle      | width                     | 48 / 3    | –             |
-|             | height                    | 24 / 1.5  | –             |
-| Handle      | height, width             | 18 / 1.25 | –             |
-| Label       | margin-top, margin-bottom | 16 / 1    | `$spacing-05` |
-| Toggle text | margin-left               | 8 / 0.5   | `$spacing-03` |
-
-<div className="image--fixed">
-
-![Structure and spacing measurements for toggle](images/toggle-style-2.png)
-
-</div>
-
-<Caption>Structure and spacing measurements for toggle | px / rem</Caption>
-
 ### Small toggle
 
 | Element      | Property                  | px / rem   | Spacing token |
@@ -86,3 +68,38 @@ phrase and any proper nouns capitalized, and no more than three words.
 <Caption>
   Structure and spacing measurements for small toggle | px / rem
 </Caption>
+
+### Medium toggle
+
+| Element       | Property                  | px / rem  | Spacing token |
+| ------------- | ------------------------- | --------- | ------------- |
+| Toggle medium | width                     | 48 / 3    | –             |
+|               | height                    | 24 / 1.5  | –             |
+| Handle        | height, width             | 18 / 1.25 | –             |
+| Label         | margin-top, margin-bottom | 16 / 1    | `$spacing-05` |
+| Toggle text   | margin-left               | 8 / 0.5   | `$spacing-03` |
+
+<div className="image--fixed">
+
+![Structure and spacing measurements for toggle](images/toggle-style-2.png)
+
+</div>
+
+<Caption>
+  Structure and spacing measurements for medium toggle | px / rem
+</Caption>
+
+## Sizes
+
+| Size        | Height px / rem |
+| ----------- | --------------- |
+| Small (sm)  | 16 / 1          |
+| Medium (md) | 24 / 1.5        |
+
+<div className="image--fixed">
+
+![Sizes for toggle](images/toggle-style-size.png)
+
+</div>
+
+<Caption>Toggle sizes | px / rem</Caption>
