--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -130,11 +130,11 @@ The widths of the date inputs may vary based on the grid and layout.
 
 <div className="image--fixed">
 
-![Sizes for date picker inputs](images/date-picker-style-5.png)
+![Sizes for simple and single date calendar sizes](images/date-picker-style-size.png)
 
 </div>
 
-<Caption>Sizes for date picker inputs | px / rem</Caption>
+<Caption>Sizes for simple and single date calendar sizes | px / rem</Caption>
 
 ### Calendar menu
 
@@ -170,7 +170,7 @@ The widths of the date inputs may vary based on the grid and layout.
 There are two types of time pickers; a 12-hour and 24-hour time picker. The
 12-hour Time Picker is accompanied by a time period (am/pm) input, while the
 24-hour clock is not. Refer to [select](/components/select/code) for inline
-select styling.
+select styling. Hi
 
 | Element | Property                    | px / rem | Spacing token |
 | ------- | --------------------------- | -------- | ------------- |
