anchor link update
updating formatting header to unique name so anchor link goes to correct heading

--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -177,7 +177,7 @@ For further content guidance, see Carbon's
 
 ## Inline notifications
 
-### Formatting
+### Inline formatting
 
 <Row>
 <Column colLg={8}>
@@ -247,7 +247,7 @@ to keyboard and screen reader users.
 | Polite    | Polite toast notifications are used to display a message to the user that does not interrupt keyboard and screen reader users current task. These notifications contain action buttons and are dismissed by the user.                  |
 | Assertive | Assertive toast notifications take focus when triggered and are more intrusive to keyboard and screen reader users. These notifications do not contain interactive elements and are automatically dismissed or dismissed by the user.  |
 
-### Formatting
+### Toast formatting
 
 <Row>
 <Column colLg={8}>
