content updates from multiple reviews

--- a/src/pages/guidelines/typography/experiences.mdx
+++ b/src/pages/guidelines/typography/experiences.mdx
@@ -88,14 +88,14 @@ allows users to scan, read, and navigate multiple pages with comfort and ease.
 
 ## Blending experiences
 
-The spaces we are designing for are no longer divided between productive and
-expressive. Understanding the rationale behind each of the experiences is the
-key. Experiences can be blended with what we call "moments" if the alternative
-experience better supports the user purpose.
+The spaces we are designing for are no longer neatly divided between productive
+and expressive. Experiences can be blended with what we call "moments" if the
+alternative experience better supports the user purpose.
 
 If your users are working in a product but pausing to read or scan for options,
 an expressive moment can facilitate easy reading and/or create a desired impact
-or pause.
+or pause. In these cases, however the "moment" would span a full page where
+there are no containers.
 
 If your users are on the website and reading, but then switch to a focused task
 within the web experience, using productive styles within that component would
@@ -117,10 +117,7 @@ Here are some of the places the product teams are using expressive moments:
 
 - Product home pages, also known as "world overview pages"
 - Onboarding
-- Empty states
 - Log in pages
-- Catalog pages
-- Expressive cards
 
 ## Guidelines
 
@@ -132,10 +129,13 @@ People unconsciously use type size as a signal of hierarchy, and each type set
 has been designed with expectations about hierarchy in mind. Mixing type styles
 within a component could jumble the hierarchy and create confusion.
 
-#### Primarily align to the space in which the user is working
+#### Use productive for product and expressive for web pages
 
-The productive type set should still be used for product and the expressive type
-set for web pages. The alternate moments are just that, moments.
+As a rule of thumb, stay in your lane and align with the primary space in which
+the user is working. The productive type set should be used for product and the
+expressive type set for web pages. The use of a blend is for key moments. It
+works well for expressive experiences to have productive moments, but is a
+little less common the other way around.
 
 #### Match and support the user task
 
@@ -153,8 +153,9 @@ to absorb.
 
 ## Questions?
 
-If you have any questions about using either of these experiences, reach out to
-the teams on Slack or sign up to share your work in a review.
+_For IBMers only:_ If you have any questions about using either of these
+experiences, reach out to the teams on Slack or sign up to share your work in a
+review.
 
 #### Carbon Design System
 
