--- a/src/pages/guidelines/typography/overview.mdx
+++ b/src/pages/guidelines/typography/overview.mdx
@@ -53,9 +53,10 @@ Within **Body styles** and **Supporting styles**, the same set of styles are
 offered. Productive styles are named with a suffix of `-01` and expressive style
 names have a suffix of `-02`.
 
-There are two heading sets, and apart from sizing, the major difference between
-them is in how they are implemented. Expressive uses a fluid type set and
-productive uses fixed headings.
+There are two heading sets and the major difference between them is in how they
+are implemented in code. The productive type set uses fixed headings. Expressive
+headings are responsive and the type styles change size at different
+breakpoints.
 
 For more detail, see [Experiences](/guidelines/typography/experiences/) and
 [Type sets](/guidelines/typography/type-sets/).
