--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -56,10 +56,12 @@ names have a suffix of `-02`.
 #### Two heading sets
 
 There are two heading type sets and the major difference between them is in how
-they are implemented.
+they are implemented in code.
 
-- Expressive uses a fluid type set for headings. Breakpoints are set in the code
-  so that the type adjusts smoothly as it moves between breakpoints.
+- Expressive headings are responsive and the type styles change size at
+  different breakpoints. The larger values have a taller line height and the
+  smaller values a more condensed light height. Breakpoints are set in the code
+  so that the type adjusts smoothly.
 
 - Productive uses fixed headings. In the product space, users are generally
   embedded within one area that has multiple containers and denser content, and
@@ -71,8 +73,9 @@ they are implemented.
 
 ## Questions?
 
-If you have any questions about using either of these experiences, reach out to
-the teams on Slack or sign up to share your work in a review.
+_For IBMers only:_ If you have any questions about using either of these
+experiences, reach out to the teams on Slack or sign up to share your work in a
+review.
 
 #### Carbon Design System
 
