added animated toast
added in animated toast gif

--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -306,7 +306,7 @@ dismissed.
 <Row>
 <Column colLg={8}>
 
-![Example of toast notification placement](images/05_toast_context_608.png)
+![Example of toast notification placement](images/05_toast_context_608.gif)
 
 </Column>
 </Row>
